# designer-waveform

./: .gitignore  README.md  pyproject.toml
configs/: random_ei.json  random_ei_orawe_params.toml
designer_waveform/: models.py  waveforms.py
nb/: 02_04_26_random_ei_network.ipynb  02_04_26_random_ei_network_coba_opsin.ipynb  02_04_26_random_ei_snn_viz.ipynb  15_04_26_allen_natural_scene_v1_l23_psth.ipynb  21_04_26_allen_natural_scene_v1_alllayers_psth.py  21_04_26_allen_natural_scene_v1_alllayers_vis.ipynb  28_04_26_allen_natural_scene_alllayers_spiketimes_vis.ipynb  28_04_26_optimise_splitgaussian_dummy_data.ipynb  28_04_26_optimise_splitgaussian_ei_snn.ipynb  28_04_26_square_wave_psth_reference.ipynb
scripts/: 16_04_26_extract_allsessions_psth.ipynb  28_04_26_download_first_session.py  28_04_26_extract_spiketimes_alllayers.py  run_random_ei_snn_pulses_lognormal_istim_orawe_params.py
