[project]
name = "designer-waveform"
version = "0.1.0"
description = "Waveform design and optimisation tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "matplotlib>=2.0",
    "scipy>=0.13.3",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]
